Test/git-issues/git-issue-1963a.dfy.expect
git-issue-1963a.dfy(12,15): Error: in refining a newtype, the '...' replaces the '=' token and everything up to the left brace starting the declaration of the newtype body (if any); a newtype refinement may not change the base type of the newtype
1 parse errors detected in git-issue-1963a.dfy
